--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -34,5 +34,5 @@ spec:
     git:
       ref:
         branch: main
-      url: https://github.com/vmware-tanzu/application-accelerator-samples.git
-    subPath: java-rest-service
+      url: https://github.com/berinle/java-rest-service.git
+      #subPath: java-rest-service
