--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: customer-profile
-    apps.tanzu.vmware.com/has-tests: true
+    apps.tanzu.vmware.com/has-tests: "true"
     apis.apps.tanzu.vmware.com/register-api: "true"
 spec:
   serviceClaims:
@@ -19,6 +19,10 @@ spec:
       - name: BP_JVM_VERSION
         value: "11"
   params:
+    - name: testing_pipeline_matching_labels
+      value:
+        apps.tanzu.vmware.com/pipeline: test-with-test-containers
+#        apps.tanzu.vmware.com/language: blah
     - name: annotations
       value:
         autoscaling.knative.dev/minScale: "1"
